--- a/config_sample.env
+++ b/config_sample.env
@@ -1,26 +1,21 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
-# Please read this for filling instructions: https://github.com/SlamDevs/slam-mirrorbot#setting-up-config-file
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "1979881766:AAEXjIGjqwmTe8CxIXfTO-WgCNu3zAJqyT0"
+GDRIVE_FOLDER_ID = "0AEKUOaUprejwUk9PVA "
+OWNER_ID = 1448695252 
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = 8
-AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 4
+AUTO_DELETE_MESSAGE_DURATION = 10
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 7460978 
+TELEGRAM_HASH = "86c44f54252c7ee59d33508dcf2e4e5c"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""  # Split by space
-SUDO_USERS = ""  # Split by space
+AUTHORIZED_CHATS = "-1001511980191 1448695252 2040214520"  # Split by space
+SUDO_USERS = "1448695252"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""  # Recommended limit is 4
+INDEX_URL = "https://official.xzqt.workers.dev/0:"
+STATUS_LIMIT = "4"  # Recommended limit is 4
 # Leech
 TG_SPLIT_SIZE = ""  # leave it empty for max size (2GB)
 AS_DOCUMENT = ""
@@ -30,8 +25,8 @@ MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 BLOCK_MEGA_FOLDER = "" 
 BLOCK_MEGA_LINKS = ""
-STOP_DUPLICATE = ""
-RECURSIVE_SEARCH = ""  # Fill True or False to search in sub-folders or not (only for shared-drive ID or root, you can't use it with folder ID)
+STOP_DUPLICATE = "True"
+RECURSIVE_SEARCH = "True"  # Fill True or False to search in sub-folders or not (only for shared-drive ID or root, you can't use it with folder ID)
 SHORTENER = ""
 SHORTENER_API = ""
 # qBittorrent
@@ -50,11 +45,11 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if its URL ends with ?a=view, if yes make it True it will work (Compatible with Bhadoo Drive Index)
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # Add more buttons (Three buttons are already added including Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them empty
-BUTTON_FOUR_NAME = ""
-BUTTON_FOUR_URL = ""
+BUTTON_FOUR_NAME = "To Access Files In The Gdrive📂"
+BUTTON_FOUR_URL = "https://groups.google.com/g/xzqt-official-group"
 BUTTON_FIVE_NAME = ""
 BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
