--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@
 BOT_TOKEN = "1979881766:AAEXjIGjqwmTe8CxIXfTO-WgCNu3zAJqyT0"
 GDRIVE_FOLDER_ID = "0AEKUOaUprejwUk9PVA"
 OWNER_ID = 1448695252 
-DOWNLOAD_DIR = "/postofoofofofkf"
+DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 4
 AUTO_DELETE_MESSAGE_DURATION = 10
 IS_TEAM_DRIVE = "True"
